try to fix mobile layout issues v6

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,8 +13,9 @@
     scrollbar-width: none; /* Firefox */
   }
 
-  .h-screen-mobile {
-    height: -webkit-fill-available;
+  .h-screen-custom {
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
   }
 }
 
